# sc-fa

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: api.py  cli.py  settings.py  site.py
app/api/: __init__.py  auth.py  site.py  token.py  user.py  user_site.py
app/cache/: __init__.py  token.py  user.py  user_site.py
app/cli/: __init__.py  site.py  user.py
app/database/: __init__.py  redis.py
app/functions/: export_model.py  file.py  import_model.py
app/models/: __init__.py  base.py  site.py  token.py  user.py  user_site.py
migrations/: env.py
migrations/versions/: 0a31c17d74e5_add_admin.py  576b8500d9f5_initial.py  6a78887f6ef2_add_user.py  99c7bdb41ddb_add_usersite.py  aaac9ba59e81_rename_user.py
