[project]
name = "sc_fa"
version = "0.1.0"
description = "HTTP URI short-cutter API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "psycopg2>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.11.0",
    "redis>=7.1.0",
    "sqlmodel>=0.0.31",
]
